get collections, edit collection name, modify search endpoint
